[gd_scene load_steps=11 format=3 uid="uid://c7mwjhpxo1aa7"]

[ext_resource type="Script" uid="uid://c8blnf3265xxk" path="res://Components/Moments/liked_by.gd" id="1_rxaff"]
[ext_resource type="Texture2D" uid="uid://u5uvm5snnfq6" path="res://UITextures/PanelElements/difficulty_bg.png" id="1_va7jd"]
[ext_resource type="FontFile" uid="uid://d4hkhl2bcn0ty" path="res://UITextures/Fonts/HankenGrotesk-ExtraBold.ttf" id="2_0upbc"]
[ext_resource type="Script" uid="uid://bcnyg4qos0dr7" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_3a2kv"]
[ext_resource type="Script" uid="uid://mr2fibppbyip" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="4_5suon"]
[ext_resource type="PackedScene" uid="uid://c3q3fqqfdkrw" path="res://Components/LoadingComponents/filter_panel.tscn" id="8_yf0nl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v8y37"]
bg_color = Color(0, 0, 0, 0.72549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8quj7"]
bg_color = Color(0, 0.0588235, 0.0588235, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0.486275, 0.486275, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Resource" id="Resource_13m8l"]
script = ExtResource("4_5suon")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_j2joj"]
script = ExtResource("4_5suon")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[node name="LikedBy" type="Control"]
visible = false
z_index = 2
custom_minimum_size = Vector2(450, 250)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rxaff")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v8y37")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -200.0
offset_right = 186.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8quj7")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -34.0
offset_right = 15.0
offset_bottom = -241.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Panel/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
texture = ExtResource("1_va7jd")
expand_mode = 1
stretch_mode = 6

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/TextureRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.127271
anchor_right = 0.725
anchor_bottom = 0.763634
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0upbc")
theme_override_font_sizes/font_size = 22
text = "Add Comment"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_8quj7")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 3.0
offset_right = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Panel/HBoxContainer/Panel/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
texture = ExtResource("1_va7jd")
expand_mode = 1
stretch_mode = 6

[node name="DifficultyLabel" type="Label" parent="Panel/VBoxContainer/Panel/HBoxContainer/Panel/HBoxContainer/TextureRect"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -25.0
offset_right = 90.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_fonts/font = ExtResource("2_0upbc")
theme_override_font_sizes/font_size = 24
text = "Liked by"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0296496
anchor_top = 0.0668317
anchor_right = 0.97035
anchor_bottom = 0.977723
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("3_3a2kv")
wheel_scroll_damper = SubResource("Resource_13m8l")
dragging_scroll_damper = SubResource("Resource_j2joj")
hide_scrollbar_over_time = true

[node name="LikeContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FilterPanel" parent="." instance=ExtResource("8_yf0nl")]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1200.0
offset_bottom = 540.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
